app minimize and excape buttons

--- a/src/html/Quotes.html
+++ b/src/html/Quotes.html
@@ -8,16 +8,22 @@
 </head>
 <body>
  <div id="body">
+     <div id="close">
+         <div id="closeBtn"></div>     
+         <div id="minBtn"></div>        
+    </div>
     <header>
         <div id="title"><span>Quotes</span></div>
         <div id="quoteTitle"><span>Quote title</span></div>
    </header>
-   <section id="body">
+   <div id="sections">
+    <section id="body">
 
-   </section>
-   <section id="footer">
-
-   </section>
+    </section>
+    <section id="footer">
+ 
+    </section>
+   </div>
  </div>
     <script>
       require('../js/Quotes.js')
