Adding Loading spinner

--- a/src/html/Quotes.html
+++ b/src/html/Quotes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quotes </title>
+    <link rel='stylesheet' href="../css/Spinner.css"/>
     <link rel='stylesheet' href="../css/Quotes.css"/>
 </head>
 <body>
@@ -14,15 +15,17 @@
     </div>
     <header>
         <!-- <div id="title"><span>Quotes</span></div> -->
-        <div id="quoteTitle">Quote title</div>
+        <div id="quoteTitle">Loading</div>
    </header>
    <div id="sections">
     <section id="body">
      <div id="quoteText">
-         This is an example of hw a quote will appear.
-         This is an example of hw a quote will appear.
-         This is an example of hw a quote will appear.
-         This is an example of hw a quote will appear.
+        <div class="holder">
+            <span class="dot1"></span>
+            <span class="dot2"></span>
+            <span class="dot3"></span>
+            <span class="dot4"></span>
+        </div>
      </div>
     </section>
     <section id="footer">
