Adding load new Quote Button

--- a/src/html/Quotes.html
+++ b/src/html/Quotes.html
@@ -7,9 +7,9 @@
     <link rel='stylesheet' href="../css/Spinner.css"/>
     <link rel='stylesheet' href="../css/Quotes.css"/>
 </head>
-<body>
+<body >
  <div id="body">
-     <div id="close">
+     <div id="close" style="-webkit-app-region: drag">
          <div id="closeBtn"></div>     
          <div id="minBtn"></div>        
     </div>
@@ -29,7 +29,14 @@
      </div>
     </section>
     <section id="footer">
- 
+      <div class="footer">
+       <div id="newQuotebtn">
+           <button class="newQuotebtn" >
+            <img class="icon" src="../images/reloadWhite.png"/>
+               <span id="text">Quote</span>
+            </button>
+        </div>
+      </div>
     </section>
    </div>
  </div>
