disable enable refresh button

--- a/src/html/Quotes.html
+++ b/src/html/Quotes.html
@@ -30,8 +30,8 @@
     </section>
     <section id="footer">
       <div class="footer">
-       <div id="newQuotebtn">
-           <button class="newQuotebtn" >
+       <div id="newQuotebtn" style="display:none;">
+           <button class="newQuotebtn">
             <img class="icon" src="../images/reloadWhite.png"/>
                <span id="text">Quote</span>
             </button>
