adding context menu

--- a/src/html/Quotes.html
+++ b/src/html/Quotes.html
@@ -32,7 +32,7 @@
       <div class="footer">
        <div id="newQuotebtn" style="display:none;">
            <button class="newQuotebtn">
-            <img class="icon" src="../images/reloadWhite.png"/>
+            <img class="icon" src="../images/reloadPink.png"/>
                <span id="text">Quote</span>
             </button>
         </div>
